--- a/SaldosMaria/packages.config
+++ b/SaldosMaria/packages.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Google.Apis" version="1.60.0" targetFramework="net46" />
+  <package id="Google.Apis.Auth" version="1.60.0" targetFramework="net46" />
+  <package id="Google.Apis.Core" version="1.60.0" targetFramework="net46" />
+  <package id="Google.Apis.Sheets.v4" version="1.60.0.2979" targetFramework="net46" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net46" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.117.0" targetFramework="net46" />
   <package id="System.Data.SQLite.Core" version="1.0.117.0" targetFramework="net46" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net46" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net46" />
 </packages>
